some neat scaling work

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 
 	
 	<body>
-		<canvas id="canvas" width="500" height="500"></canvas>
+		<canvas id="canvas" width="600" height="600"></canvas>
+		<!-- todo: make some nice sliders and boxes for customizing sim -->
 	</body>
 	<script>
 	init();
