--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
 		<br />
 		<br />
 		<br />
+		
+		<h3>Todo List</h3>
+		<ul>
+		<li>Fix interval input box</li>
+		<li>Add more scenarios</li>
+		<li>Prettify UI maybe</li>
+		<li>Custom colors?</li>
+		<li>User Manual</li>
+		</ul>
+		
 		<center>By <a href="https://github.com/frankpaschen99">Frank Paschen</a></center>
 	</body>
 </head>
