--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 	<h3>Todo List</h3>
 	<ul>
 	<li>Fix interval input box - DONE</li>
+	<li>Interval slider glitchy</li>
 	<li>Add more scenarios</li>
 	<li>Prettify UI maybe</li>
 	<li>Custom colors?</li>
