--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<h1>Conway's Game of Life</h1>
 	<p>Configure settings to your liking then press "Start"</p>
 	<div id="gen"></div>
-	<canvas id="canvas" width="600" height="600"></canvas>
+	<canvas id="canvas" width="600" height="600" ></canvas>
 	<br />
 	<!-- todo: make some nice sliders and boxes for customizing sim -->
 	
@@ -32,7 +32,7 @@
 	<h3>Todo List</h3>
 	<ul>
 	<li>Fix interval input box - DONE</li>
-	<li>Interval slider glitchy</li>
+	<li>Interval slider glitchy - FIXED</li>
 	<li>Add more scenarios</li>
 	<li>Prettify UI maybe</li>
 	<li>Custom colors?</li>
