--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 	<p>Configure settings to your liking then press "Start"</p>
 	<div id="gen"></div>
 	<canvas id="canvas" width="600" height="600" ></canvas>
-	<br />
-	<!-- todo: make some nice sliders and boxes for customizing sim -->
 	
-	<!--<p>Interval Duration (milliseconds):</p><input id="speed" type="text" name="speed" value="100">-->
+	<br />
+	
 	<div class="slidecontainer">
 		<p>Adjust speed of simulation:</p>
-		<input id="slider" type="range" min="1" max="600" value="100" onchange="updateSpeed()">
+		<input id="slider" type="range" min="1" max="600" value="451" onchange="updateSpeed()">
+		<p>Speed: </p><div id="speed"></div> 
 	</div>
 	<p>Board Size:</p><input id="size" type="text" name="size" value="50"><br /><br />
 	
@@ -20,11 +20,13 @@
 		<option value="1">Random</option>
 		<option value="2">10 Cell Line</option>
 	</select>
+	
 	<br />
 	<br />
 	<br />
 	
-	<input id="startButton" type="button" value="Start Simulation" onclick="init();" /
+	<input id="startButton" type="button" value="Start Simulation" onclick="init();" />
+	
 	<br />
 	<br />
 	<br />
@@ -46,5 +48,6 @@
 	<script src="script.js"></script>
 	<link rel="stylesheet" href="style.css">
 </head>
+
 
 </html>
