lol wat was i doing

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <body>
 	<h1>Conway's Game of Life</h1>
-	<p>Configure settings to your liking then press "Start"</p>
+	<p>Configure settings to your liking then press "Start". Green cells are "alive", and orange cells are "dead".</p>
 	<div id="gen"></div>
 	<canvas id="canvas" width="600" height="600" ></canvas>
 	
@@ -33,13 +33,8 @@
 	
 	<h3>Todo List</h3>
 	<ul>
-	<li>Fix interval input box - DONE</li>
-	<li>Interval slider glitchy - FIXED</li>
-	<li>Add more scenarios</li>
-	<li>Prettify UI maybe</li>
-	<li>Custom colors?</li>
+	<li>Let user specify alive cells before starting</li>
 	<li>User Manual</li>
-	<li>MAYBE support seeding</li>
 	</ul>
 	
 	<center>By <a href="https://github.com/frankpaschen99">Frank Paschen</a></center>
