switched to display instead of visibility so the div isnt taking up space

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<p>Configure settings to your liking then press "Start". Green cells are "alive", and orange cells are "dead".</p>
 	<div id="gen"></div>
 	<canvas id="canvas" width="600" height="600" onclick="setCellAlive(event)"></canvas>
-	<div id="userDefined" style="visibility: hidden;">
+	<div id="userDefined" style="display: none;">
 		<h2>User Defined Input</h2>
 		<p>Click on the canvas above to set individual cells Alive, then press the button below to start.</p>
 		<input id="startButton" type="button" value="Start User-Defined Simulation" onclick="userDefinedStart()" />
