user manual link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
 	<br />
 	
 	<input id="startButton" type="button" value="Start Simulation" onclick="init();" />
-	
+	<br />
+	<br />
+	<br />
+	<a href="user manual.pdf">User Manual</a>
 	<center>By <a href="https://github.com/frankpaschen99">Frank Paschen</a></center>
 </body>
 <head>
