--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </body>
 <head>
 	<script src="script.js"></script>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="style/stylesheet.css">
 </head>
 
 
